Resolve some of the CI test failures ; clang-format

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -206,7 +206,25 @@ endif()
 if(M3_ENABLE_ANDROID)
     if(ANDROID)
         target_compile_definitions(m3 PUBLIC M3_ANDROID_AVAILABLE)
-        target_link_libraries(m3 PUBLIC camera2ndk mediandk)
+        set(M3_ANDROID_API_LEVEL 0)
+        if(DEFINED ANDROID_NATIVE_API_LEVEL)
+            set(M3_ANDROID_API_LEVEL ${ANDROID_NATIVE_API_LEVEL})
+        elseif(DEFINED ANDROID_PLATFORM)
+            string(REGEX REPLACE "android-" "" M3_ANDROID_API_LEVEL "${ANDROID_PLATFORM}")
+        elseif(CMAKE_SYSTEM_VERSION)
+            set(M3_ANDROID_API_LEVEL ${CMAKE_SYSTEM_VERSION})
+        endif()
+        if(M3_ANDROID_API_LEVEL GREATER_EQUAL 24)
+            find_library(M3_ANDROID_CAMERA2_LIB camera2ndk)
+            find_library(M3_ANDROID_MEDIA_LIB mediandk)
+            if(M3_ANDROID_CAMERA2_LIB AND M3_ANDROID_MEDIA_LIB)
+                target_link_libraries(m3 PUBLIC ${M3_ANDROID_CAMERA2_LIB} ${M3_ANDROID_MEDIA_LIB})
+            else()
+                message(WARNING "Android camera2ndk/mediandk not found; camera support disabled.")
+            endif()
+        else()
+            message(WARNING "Android API level < 24; camera2ndk/mediandk not linked.")
+        endif()
     else()
         message(WARNING "M3_ENABLE_ANDROID is ON but not building for Android; Android backend will be stubbed.")
     endif()
